testsuite/tests/checks/not_imported_overlays/test.out
overlay.ads:4:21: error: not imported overlay
4 |    J : Integer with Address => I'Address;  --  FLAG
  |                     ^^^^^^^^^^^^^^^^^^^^ 

overlay.ads:6:4: error: not imported overlay
6 |    for K'Address use I'Address;            --  FLAG
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

